[workspace]
members = [
	"common",
	"node",
	"pallets/block-reward",
	"pallets/dapi",
	"pallets/dapi-staking",
	"pallets/fisherman",
	"pallets/validator-set",
	"runtime/keiko",
	"runtime/local",
]

[patch.crates-io]
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "8c625a5ab43c1c56cdeed5f8d814a891566d4cf8" }
orml-utilities = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "8c625a5ab43c1c56cdeed5f8d814a891566d4cf8" }
[profile.release]
panic = "unwind"
