[package]
name = "common"
authors = [ "Codelight" ]
edition = "2021"
version = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "derive" ] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
scale-info = { version = "2.1.0", default-features = false, features = [ "derive" ] }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-support/std",
	"scale-info/std",
]
