[package]
name = "pallet-fisherman"
authors = [ "Codelight" ]
edition = "2021"
version = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "derive" ] }
hex = { version = "0.4.3", default-features = false, features = [ "alloc" ] }
lite-json = { version = "0.2.0", default-features = false, defaults = [ "no_std" ] }
scale-info = { version = "2.0.1", default-features = false, features = [ "derive" ] }
serde = { version = "1.0.136", default-features = false, features = [ "derive" ] }
serde_json = { version = "1.0.68", default-features = false, features = [ "alloc" ] }

frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", optional = true, default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }

pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }

orml-traits = { version = "0.4.1-dev", default-features = false }
orml-utilities = { version = "0.4.1-dev", default-features = false }

[dev-dependencies]
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }

[features]
default = [ "std" ]
std = [ "codec/std", "frame-benchmarking/std", "frame-support/std", "frame-system/std", "hex/std", "lite-json/std", "pallet-balances/std", "pallet-membership/std", "pallet-timestamp/std", "sp-core/std", "sp-io/std", "sp-runtime/std", "sp-std/std" ]
